--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
 日常记录
-20190226:首次登陆服务器。为服务器个人目录安装miniconda以及毕业设计需要的包环境。
+20190226:首次登陆服务器。为服务器个人目录安装miniconda以及毕业设计需要的包环境。学会在服务器上网。
 20190227:下载毕业设计所需数据。搭建bert服务器。
