--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
 日常记录
 20190226:首次登陆服务器。为服务器个人目录安装miniconda以及毕业设计需要的包环境。学会在服务器上网。
 20190227:下载毕业设计所需数据。搭建bert服务器。
+20190228:分析Marco以及record数据集，尝试下载narrativeQA数据集。开始写classification代码。
+20190301:调试bert服务器。确认不实用nltk（太慢了）。
