--- a/readme
+++ b/readme
@@ -2,4 +2,4 @@
 20190226:首次登陆服务器。为服务器个人目录安装miniconda以及毕业设计需要的包环境。学会在服务器上网。
 20190227:下载毕业设计所需数据。搭建bert服务器。
 20190228:分析Marco以及record数据集，尝试下载narrativeQA数据集。开始写classification代码。
-20190301:调试bert服务器。确认不实用nltk（太慢了）。
+20190301:调试bert服务器。确认不实用nltk（太慢了）。加载marco的时候不用bert，在训练的时候用bert。考虑如何改进marco数据的存储方式。
