--- a/readme
+++ b/readme
@@ -3,3 +3,9 @@
 20190227:下载毕业设计所需数据。搭建bert服务器。
 20190228:分析Marco以及record数据集，尝试下载narrativeQA数据集。开始写classification代码。
 20190301:调试bert服务器。确认不实用nltk（太慢了）。加载marco的时候不用bert，在训练的时候用bert。考虑如何改进marco数据的存储方式。加入BiDAF代码。
+20190302:基本完成分类代码。
+
+
+接下来任务：
+如何实现class balanced cross-entropy
+如何优化Marco的存储
