--- a/readme
+++ b/readme
@@ -3,8 +3,10 @@
 20190227:下载毕业设计所需数据。搭建bert服务器。
 20190228:分析Marco以及record数据集，尝试下载narrativeQA数据集。开始写classification代码。
 20190301:调试bert服务器。确认不实用nltk（太慢了）。加载marco的时候不用bert，在训练的时候用bert。考虑如何改进marco数据的存储方式。加入BiDAF代码。
-20190302:基本完成分类代码。实现class balanced cross-entropy
+20190302:基本完成分类代码。实现class balanced cross-entropy。模型跑起来了。不知道最后的结果，loss下降不明显（可能数据过于稀疏）。
 
 
 接下来任务：
-如何优化Marco的存储
+如何优化Marco的存储。
+如何优化模型，现在的模型太大了。如何精简？
+思考一下如何开发ptr-generator的模型。
