--- a/readme
+++ b/readme
@@ -7,8 +7,10 @@
 20190303:开始着手开发ptr-generator模型。然后几天放假……肝不动了。
 20190304:分析Marco数据集的common sense部分，得出结论，Marco无需common sense。
 20190305:思考如何优化模型，没有太好的思路。思考如何开发ptr-generator。
+20190306:开发seq2seq with attentin模型。
 
 接下来任务：
+0306开发的demo有问题，answer的输入是[batch_size x max_seq_length x bert_embedding_size]的
 如何优化Marco的存储。
 如何优化模型，现在的模型太大了。如何精简？
 思考一下如何开发ptr-generator的模型。
