--- a/readme
+++ b/readme
@@ -4,13 +4,14 @@
 20190228:分析Marco以及record数据集，尝试下载narrativeQA数据集。开始写classification代码。
 20190301:调试bert服务器。确认不实用nltk（太慢了）。加载marco的时候不用bert，在训练的时候用bert。考虑如何改进marco数据的存储方式。加入BiDAF代码。
 20190302:基本完成分类代码。实现class balanced cross-entropy。模型跑起来了。不知道最后的结果，loss下降不明显（可能数据过于稀疏）。
-20190303:开始着手开发ptr-generator模型。然后几天放假……肝不动了。
+20190303:开始着手开发ptr-generator模型。然后今天放假……肝不动了。写开题报告以及任务书。
 20190304:分析Marco数据集的common sense部分，得出结论，Marco无需common sense。
 20190305:思考如何优化模型，没有太好的思路。思考如何开发ptr-generator。
-20190306:开发seq2seq with attentin模型，开发到context vector之前。
+20190306:开发seq2seq with attention模型，开发到context vector之前。
+20190307:完成开发seq2seq with attention模型，我真是个天才。放弃大glove，词太多了，使用小glove。完善开题报告以及任务书。
 
 接下来任务：
-0306开发的demo有问题，answer的输入是[batch_size x max_seq_length x bert_embedding_size]的
+0307的模型中，loss为nan，需要解决。
+开发ptr-generator的模型。
 如何优化Marco的存储。
 如何优化模型，现在的模型太大了。如何精简？
-思考一下如何开发ptr-generator的模型。
