--- a/readme
+++ b/readme
@@ -9,9 +9,11 @@
 20190305:思考如何优化模型，没有太好的思路。思考如何开发ptr-generator。
 20190306:开发seq2seq with attention模型，开发到context vector之前。
 20190307:完成开发seq2seq with attention模型，我真是个天才。放弃大glove，词太多了，使用小glove。完善开题报告以及任务书。
+20190308:过三八妇女节。
+20190309:准备并完成哥伦比亚大学的面试。
+20190310:开发ptr generator network，等待计算p(w)
 
 接下来任务：
-0307的模型中，loss为nan，需要解决。问题发现：gather_nd的prob全是nan。
 开发ptr-generator的模型。
 如何优化Marco的存储。
 如何优化模型，现在的模型太大了。如何精简？
