--- a/readme
+++ b/readme
@@ -15,6 +15,6 @@
 20190313:完成ptr generator network。p(w)：将pvocab与at concat之后，来求。在读入Marco的时候对answer编码进行扩充。将OOV的index计算出来。
 
 接下来任务：
-开发ptr-generator的模型。
+再开发一个ptr。
 如何优化Marco的存储。
 如何优化模型，现在的模型太大了。如何精简？
