--- a/readme
+++ b/readme
@@ -2,7 +2,7 @@
 20190226:首次登陆服务器。为服务器个人目录安装miniconda以及毕业设计需要的包环境。学会在服务器上网。
 20190227:下载毕业设计所需数据。搭建bert服务器。
 20190228:分析Marco以及record数据集，尝试下载narrativeQA数据集。开始写classification代码。
-20190301:调试bert服务器。确认不实用nltk（太慢了）。加载marco的时候不用bert，在训练的时候用bert。考虑如何改进marco数据的存储方式。加入BiDAF代码。
+20190301:调试bert服务器。确认不实用nltk（太慢了）。加载marco的时候不用bert，在训练的时候用bert。考虑如何改进marco数据的存储方式。加入BiDAF。
 20190302:基本完成分类代码。实现class balanced cross-entropy。模型跑起来了。不知道最后的结果，loss下降不明显（可能数据过于稀疏）。
 20190303:开始着手开发ptr-generator模型。然后今天放假……肝不动了。写开题报告以及任务书。
 20190304:分析Marco数据集的common sense部分，得出结论，Marco无需common sense。
