--- a/readme
+++ b/readme
@@ -13,7 +13,7 @@
 20190309:准备并完成哥伦比亚大学的面试。
 20190310:开发ptr generator network，等待计算p(w)
 20190311:完成ptr generator network。p(w)：将pvocab与at concat之后，来求。在读入Marco的时候对answer编码进行扩充。将OOV的index计算出来。
-20190312:优化Marco存储。[ [paragraph k], [query], [answer], [label k], [answer index]]
+20190312:优化Marco存储。[[paragraph k], [query], [answer], [label k], [answer index], [answer word]]
 20190313:获得自己的词表（词频统计）。
 20190314:建立bidaf_classification的精简版。
 20190315:实现valid paragraph的提取，开始着手优化ptr generator networks。
