--- a/readme
+++ b/readme
@@ -20,8 +20,11 @@
 20190316:向bidaf classification中加入tensorboard的可视化以及模型的saver。继续完善generator network，LOSS计算有问题。
 20190317:重构generator network的computational graph。
 20190318:生成网络的输入读入。加入tf.while_loop的API。生成网络测试可运行。
+20190319:添加BiLSTM到分类。思考如何使用tf.data.dataset并行数据读入。
+20190320:预处理marco数据集，将所有的bert embedding加载出来。
 
 接下来：
+生成网络word的embedding有问题。
 生成网络的loss，acc可视化。
 优化分类模型。
 实现transformer
