--- a/readme
+++ b/readme
@@ -27,6 +27,7 @@
 20190323:研究cudnn的使用方法。将bilstm换成cudnn_lstm来提升效率。
 20190324:修改生成网络的代码。生成网络的loss使用stack代替。
 20190325:修改生成网络的embedding获取。测试生成网络个部分的工作效果。我驾驭不了coverage！！！！！！！！！！太难了！！！！！！！！
+20190326:完成没有coverage的生成网络开发。
 
 接下来：
 查看各placeholder的准备输入是否正确。检测loss与answer pre是否正确。
