--- a/readme
+++ b/readme
@@ -29,7 +29,7 @@
 20190325:修改生成网络的embedding获取。测试生成网络个部分的工作效果。我驾驭不了coverage！！！！！！！！！！太难了！！！！！！！！
 20190326:完成没有coverage的生成网络开发。
 20190327:把分类模型以及生成模型联合在一起。
-20190328:调整昨天和在一起的模型。
+20190328:调整昨天和在一起的模型。生成网络有问题！！！！！！！不知道问题在哪里。
 
 接下来：
 查看各placeholder的准备输入是否正确。检测loss与answer pre是否正确。
