--- a/readme
+++ b/readme
@@ -34,6 +34,10 @@
 20190330:发现使用bert的问题，bert返回的东西有<cls>等token，会影生成网络。加入batch normal。准备换回glove。
 20190331-20190407:生病。
 20190408:老子回来了！！接着肝，重新画模型图。重新跑模型。开始写循环的生成网络。测试用的代码有点问题，训练的ans加入<start>与<end>。
+20190409:使用小规模数据2w条，进行训练，回到glove，这样比较方便。
+20190410:写中期报告，画模型图。是谁给我把程序停了的？MD！
+20190411:做中期汇报ppt。
+20190412:翻译论文。
 
 
 接下来：
